Shortened path to help Android Studio build in windows

--- a/projects/msvc12/GLideN64.vcxproj
+++ b/projects/msvc12/GLideN64.vcxproj
@@ -293,32 +293,32 @@
     <ClCompile Include="..\..\src\Graphics\CombinerProgram.cpp" />
     <ClCompile Include="..\..\src\Graphics\Context.cpp" />
     <ClCompile Include="..\..\src\Graphics\ObjectHandle.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\GLFunctions.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\GLSL\glsl_CombinerInputs.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\GLSL\glsl_CombinerProgramBuilder.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\GLSL\glsl_CombinerProgramImpl.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\GLSL\glsl_CombinerProgramUniformFactory.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\GLSL\glsl_ShaderStorage.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\GLSL\glsl_SpecialShadersFactory.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\GLSL\glsl_Utils.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\mupen64plus\mupen64plus_DisplayWindow.cpp">
+    <ClCompile Include="..\..\src\Graphics\OGLContext\GLFunctions.cpp" />
+    <ClCompile Include="..\..\src\Graphics\OGLContext\GLSL\glsl_CombinerInputs.cpp" />
+    <ClCompile Include="..\..\src\Graphics\OGLContext\GLSL\glsl_CombinerProgramBuilder.cpp" />
+    <ClCompile Include="..\..\src\Graphics\OGLContext\GLSL\glsl_CombinerProgramImpl.cpp" />
+    <ClCompile Include="..\..\src\Graphics\OGLContext\GLSL\glsl_CombinerProgramUniformFactory.cpp" />
+    <ClCompile Include="..\..\src\Graphics\OGLContext\GLSL\glsl_ShaderStorage.cpp" />
+    <ClCompile Include="..\..\src\Graphics\OGLContext\GLSL\glsl_SpecialShadersFactory.cpp" />
+    <ClCompile Include="..\..\src\Graphics\OGLContext\GLSL\glsl_Utils.cpp" />
+    <ClCompile Include="..\..\src\Graphics\OGLContext\mupen64plus\mupen64plus_DisplayWindow.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\opengl_Attributes.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\opengl_BufferManipulationObjectFactory.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\opengl_CachedFunctions.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\opengl_ColorBufferReaderWithBufferStore.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\opengl_ColorBufferReaderWithPixelBuffer.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\opengl_ColorBufferReaderWithReadPixels.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\opengl_ContextImpl.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\opengl_GLInfo.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\opengl_Parameters.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\opengl_TextureManipulationObjectFactory.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\opengl_UnbufferedDrawer.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\opengl_Utils.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\opengl_BufferedDrawer.cpp" />
-    <ClCompile Include="..\..\src\Graphics\OpenGLContext\windows\windows_DisplayWindow.cpp">
+    <ClCompile Include="..\..\src\Graphics\OGLContext\opengl_Attributes.cpp" />
+    <ClCompile Include="..\..\src\Graphics\OGLContext\opengl_BufferManipulationObjectFactory.cpp" />
+    <ClCompile Include="..\..\src\Graphics\OGLContext\opengl_CachedFunctions.cpp" />
+    <ClCompile Include="..\..\src\Graphics\OGLContext\opengl_ColorBufferReaderWithBufferStore.cpp" />
+    <ClCompile Include="..\..\src\Graphics\OGLContext\opengl_ColorBufferReaderWithPixelBuffer.cpp" />
+    <ClCompile Include="..\..\src\Graphics\OGLContext\opengl_ColorBufferReaderWithReadPixels.cpp" />
+    <ClCompile Include="..\..\src\Graphics\OGLContext\opengl_ContextImpl.cpp" />
+    <ClCompile Include="..\..\src\Graphics\OGLContext\opengl_GLInfo.cpp" />
+    <ClCompile Include="..\..\src\Graphics\OGLContext\opengl_Parameters.cpp" />
+    <ClCompile Include="..\..\src\Graphics\OGLContext\opengl_TextureManipulationObjectFactory.cpp" />
+    <ClCompile Include="..\..\src\Graphics\OGLContext\opengl_UnbufferedDrawer.cpp" />
+    <ClCompile Include="..\..\src\Graphics\OGLContext\opengl_Utils.cpp" />
+    <ClCompile Include="..\..\src\Graphics\OGLContext\opengl_BufferedDrawer.cpp" />
+    <ClCompile Include="..\..\src\Graphics\OGLContext\windows\windows_DisplayWindow.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_mupenplus|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release_mupenplus|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_mupenplus_uniformset|Win32'">true</ExcludedFromBuild>
@@ -432,28 +432,28 @@
     <ClInclude Include="..\..\src\Graphics\ContextImpl.h" />
     <ClInclude Include="..\..\src\Graphics\FramebufferTextureFormats.h" />
     <ClInclude Include="..\..\src\Graphics\ObjectHandle.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\GLFunctions.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\GLSL\glsl_CombinerInputs.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\GLSL\glsl_CombinerProgramBuilder.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\GLSL\glsl_CombinerProgramImpl.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\GLSL\glsl_CombinerProgramUniformFactory.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\GLSL\glsl_ShaderPart.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\GLSL\glsl_ShaderStorage.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\GLSL\glsl_SpecialShadersFactory.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\GLSL\glsl_Utils.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\opengl_Attributes.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\opengl_BufferManipulationObjectFactory.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\opengl_CachedFunctions.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\opengl_ColorBufferReaderWithBufferStore.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\opengl_ColorBufferReaderWithPixelBuffer.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\opengl_ColorBufferReaderWithReadPixels.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\opengl_ContextImpl.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\opengl_GLInfo.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\opengl_GraphicsDrawer.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\opengl_TextureManipulationObjectFactory.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\opengl_UnbufferedDrawer.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\opengl_Utils.h" />
-    <ClInclude Include="..\..\src\Graphics\OpenGLContext\opengl_BufferedDrawer.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\GLFunctions.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\GLSL\glsl_CombinerInputs.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\GLSL\glsl_CombinerProgramBuilder.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\GLSL\glsl_CombinerProgramImpl.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\GLSL\glsl_CombinerProgramUniformFactory.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\GLSL\glsl_ShaderPart.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\GLSL\glsl_ShaderStorage.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\GLSL\glsl_SpecialShadersFactory.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\GLSL\glsl_Utils.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\opengl_Attributes.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\opengl_BufferManipulationObjectFactory.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\opengl_CachedFunctions.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\opengl_ColorBufferReaderWithBufferStore.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\opengl_ColorBufferReaderWithPixelBuffer.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\opengl_ColorBufferReaderWithReadPixels.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\opengl_ContextImpl.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\opengl_GLInfo.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\opengl_GraphicsDrawer.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\opengl_TextureManipulationObjectFactory.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\opengl_UnbufferedDrawer.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\opengl_Utils.h" />
+    <ClInclude Include="..\..\src\Graphics\OGLContext\opengl_BufferedDrawer.h" />
     <ClInclude Include="..\..\src\Graphics\Parameter.h" />
     <ClInclude Include="..\..\src\Graphics\Parameters.h" />
     <ClInclude Include="..\..\src\Graphics\PixelBuffer.h" />
