--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,6 +46,7 @@ set(GLideN64_SOURCES
   PostProcessor.cpp
   RDP.cpp
   RSP.cpp
+  RSP_LoadMatrix.cpp
   S2DEX2.cpp
   S2DEX.cpp
   SoftwareRender.cpp
@@ -176,12 +177,12 @@ endif(MINGW)
 if(WIN32)
   list(APPEND GLideN64_SOURCES ${GLideN64_SOURCES_WIN})
   add_definitions(
-	-DOS_WINDOWS
-	-D__WIN32__
-	-DWIN32
-	-D_WIN32_ASM
-	-D_CRT_SECURE_NO_WARNINGS
-	-D__MSC__
+    -DOS_WINDOWS
+    -D__WIN32__
+    -DWIN32
+    -D_WIN32_ASM
+    -D_CRT_SECURE_NO_WARNINGS
+    -D__MSC__
   )
 endif(WIN32)
 
@@ -233,11 +234,22 @@ if(NEON_OPT)
   list(APPEND GLideN64_SOURCES
     3DMathNeon.cpp
     gSPNeon.cpp
+    RSP_LoadMatrixNeon.cpp
   )
   list(REMOVE_ITEM GLideN64_SOURCES
     3DMath.cpp
+    RSP_LoadMatrix.cpp
   )
 endif(NEON_OPT)
+
+if(X86_OPT)
+  list(APPEND GLideN64_SOURCES
+    RSP_LoadMatrixX86.cpp
+  )
+  list(REMOVE_ITEM GLideN64_SOURCES
+    RSP_LoadMatrix.cpp
+  )
+endif(X86_OPT)
 
 # Build type
 
