Update custom settings for Paper Mario/Mario Story

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -79,6 +79,14 @@ frameBufferEmulation\N64DepthCompare=1
 Good_Name=Mario Golf (E)(J)(U)
 frameBufferEmulation\copyDepthToRDRAM=0
 
+[MARIO%20STORY]
+Good_Name=Mario Story (J)
+frameBufferEmulation\copyToRDRAM=1
+
+[PAPER%20MARIO]
+Good_Name=Paper Mario (E)(U)
+frameBufferEmulation\copyToRDRAM=1
+
 [PENNY%20RACERS]
 Good_Name=Penny Racers (E)(U)
 frameBufferEmulation\copyToRDRAM=0
