Added floating point support to ColorBufferReader
I consolidated a lot of code that was the same between implementations in
the process, so now the code is common.

--- a/projects/msvc12/GLideN64.vcxproj
+++ b/projects/msvc12/GLideN64.vcxproj
@@ -290,6 +290,7 @@
     <ClCompile Include="..\..\src\GBI.cpp" />
     <ClCompile Include="..\..\src\gDP.cpp" />
     <ClCompile Include="..\..\src\GLideN64.cpp" />
+    <ClCompile Include="..\..\src\Graphics\ColorBufferReader.cpp" />
     <ClCompile Include="..\..\src\Graphics\CombinerProgram.cpp" />
     <ClCompile Include="..\..\src\Graphics\Context.cpp" />
     <ClCompile Include="..\..\src\Graphics\ObjectHandle.cpp" />
