--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -50,6 +50,7 @@ set(GLideN64_SOURCES
   S2DEX2.cpp
   S2DEX.cpp
   SoftwareRender.cpp
+  T3DUX.cpp
   TexrectDrawer.cpp
   TextDrawer.cpp
   TextureFilterHandler.cpp
