--- a/projects/msvc12/GLideN64.vcxproj
+++ b/projects/msvc12/GLideN64.vcxproj
@@ -281,6 +281,7 @@
     <ClCompile Include="..\..\src\DepthBufferRender\ClipPolygon.cpp" />
     <ClCompile Include="..\..\src\DepthBufferRender\DepthBufferRender.cpp" />
     <ClCompile Include="..\..\src\DisplayWindow.cpp" />
+    <ClCompile Include="..\..\src\F3DAM.cpp" />
     <ClCompile Include="..\..\src\F3DEX2ACCLAIM.cpp" />
     <ClCompile Include="..\..\src\F3DEX2CBFD.cpp" />
     <ClCompile Include="..\..\src\F3DEX2MM.cpp" />
@@ -422,6 +423,7 @@
     <ClInclude Include="..\..\src\DepthBufferRender\ClipPolygon.h" />
     <ClInclude Include="..\..\src\DepthBufferRender\DepthBufferRender.h" />
     <ClInclude Include="..\..\src\DisplayWindow.h" />
+    <ClInclude Include="..\..\src\F3DAM.h" />
     <ClInclude Include="..\..\src\F3DEX2ACCLAIM.h" />
     <ClInclude Include="..\..\src\F3DEX2CBFD.h" />
     <ClInclude Include="..\..\src\F3DEX2MM.h" />
